--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@
 /.pnp
 .pnp.js
 
+#python environment
+venv/
+__pycache__/
+*.pyc
+
 # testing
 /coverage
 
@@ -18,6 +23,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+
+
 
 npm-debug.log*
 yarn-debug.log*
